--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,21 @@
 cmake_minimum_required(VERSION 3.0)
 project(ClassroomModel)
-add_executable(${PROJECT_NAME} src/main.cpp)
+set(OpenGL_GL_PREFERENCE GLVND)
+find_package(OpenGL REQUIRED)
+add_executable(main src/main.cpp)
 add_subdirectory(external_libraries/glfw)
-target_include_directories(${PROJECT_NAME}
+add_subdirectory(external_libraries/glm)
+find_package(GLUT REQUIRED)
+find_package(GLU REQUIRED)
+target_include_directories(main
     PUBLIC external_libraries/glfw/include
+
 )
-target_link_directories(${PROJECT_NAME}
+target_link_directories(main
     PRIVATE external_libraries/glfw/src
+
+    
+
 )
-target_link_libraries(${PROJECT_NAME} glfw)
+target_link_libraries(main glfw ${OPENGL_LIBRARY} glm glut GLU GL)
+
